--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -50,6 +51,7 @@
     "@types/axios": "^0.14.0",
     "@types/react-cookies": "^0.1.0",
     "@types/react-router-dom": "^5.3.2",
-    "@types/redux": "^3.6.0"
+    "@types/redux": "^3.6.0",
+    "@types/socket.io-client": "^3.0.0"
   }
 }
