--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/peerjs": "^1.1.0",
     "@types/react-cookies": "^0.1.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux": "^3.6.0",
