--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
@@ -54,6 +55,7 @@
     "@types/react-cookies": "^0.1.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux": "^3.6.0",
+    "@types/simple-peer": "^9.11.4",
     "@types/socket.io-client": "^3.0.0"
   }
 }
